fix layout bug

--- a/src/weather/weather.css
+++ b/src/weather/weather.css
@@ -17,7 +17,7 @@
 }
 
 .panel {
-  flex: 0 0 50%;
+  flex: 0 0 100%;
   width: 50%;
   height: 100%;
   overflow: hidden;
